# fuz

./: .gitignore  citation.cff  desktop.ini  hatch.toml  moon.yml  pixi.toml  pyproject.toml  readme.md  ruff.toml
.github/: funding.yml
.github/workflows/: pages-obr-ch1.yml  sphinx-to-pages.yml
.moon/: workspace.yml
.moon/cache/: runReport.json
.moon/cache/states/: moonVersionCheck.json  partialProjectGraph.json  projects.json  toolSystem-global.json
.moon/cache/states/root/: snapshot.json
.moon/cache/states/root/push/: lastRun.json
.moon/cache/states/root/push-dpy/: lastRun.json
.moon/cache/states/root/push-poc/: lastRun.json
.moon/cache/states/root/push-root/: lastRun.json
dendropy/: .gitignore  .gitrepo  moon.yml  pyproject.toml
dendrovault/: .gitrepo  readme.md
dendrovault/.obsidian/: community-plugins.json  workspace.json
dendrovault/.obsidian/plugins/advanced-canvas/: data.json  main.js  manifest.json  styles.css
dendrovault/.obsidian/plugins/canvasblocks/: data.json  main.js
dendrovault/about/: design decisions.md
docs/source/: conf.py  index.md  index.rst
docs/source/_static/: switcher.json
docs/source/_static/css/: custom.css
docs/source/mo/: index.md
fuz/: _version.py  log.py  logic.py  marimo.py  plot.py  pool.py  rank.py  types.py  utils.py
fuz/demo/: optimal_bayesian_ranking_ch1.py  optimal_bayesian_ranking_ch2.py  optimal_bayesian_ranking_ch3.py  ranking.py
fuz/demo/__marimo__/: optimal_bayesian_ranking_ch1.ipynb
fuz/dists/: __init__.py  beta.py  dirichlet.py
fuz/gpu/: types.py
lib/dendropy/: .gitignore  .gitrepo  pyproject.toml
lib/fuz/: .gitignore  .gitrepo  CHANGELOG.md  citation.cff  hatch.toml  license.md  pixi.toml  pyproject.toml  readme.md  ruff.toml
lib/fuz/docs/source/: conf.py
lib/fuz/fuz/: convert.py  log.py  rank.py  utils.py
lib/fuz/fuz/demo/: ranking.py
