[project]
name = "dendropy"
version = "0.1.0"
description = "dendropy implements algorithms for belief analysis"
authors = [{ name = "miraia chiou", email = "raiachiou@gmail.com" }]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
dendropy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
marimo = ">=0.7.10,"
scipy = ">=1.14.0"
